Get test coverage to 82% Minor updates to WAF, test cases in progress